# HRMS

./: .gitignore
HRForz-API/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  public.pem  pyproject.toml
HRForz-API/alembic/: env.py
HRForz-API/alembic/versions/: 01c8240cd769_add_employee_onboardings_and_onboarding_.py  a1b2c3d4e5f6_add_holiday_types_table.py  add_account_type_and_leave_plan.py  aebc600ae30d_initial_schema.py  b2c3d4e5f6g7_add_pf_esi_pt_details_to_employee.py  c3d4e5f6g7h8_refactor_holiday_type_to_fk.py  d1e2f3g4h5i6_add_address_line3_and_tin_to_organisation.py  ddf3068832ef_add_lookup_tables.py
HRForz-API/app/: config.py  constants.py  main.py
HRForz-API/app/core/cache/: client.py  keys.py
HRForz-API/app/core/db/: mixins.py  session.py
HRForz-API/app/core/email/: base.py  sendgrid.py
HRForz-API/app/core/exceptions/: base.py  handlers.py
HRForz-API/app/core/logging/: setup.py
HRForz-API/app/core/middleware/: rate_limit.py  timing.py
HRForz-API/app/core/observability/: metrics.py  tracing.py
HRForz-API/app/core/security/: jwt.py  password.py
HRForz-API/app/models/: __init__.py  announcement.py  attendance.py  audit.py  department.py  employee.py  helpdesk.py  holiday.py  leave.py  lookup.py  notification.py  onboarding.py  organisation.py  payroll.py  permission.py  user.py
HRForz-API/scripts/: create_superadmin.py  generate_rsa_keys.py  seed_dev.py
HRForz-API/tests/: conftest.py
HRForz-API/tests/integration/: test_health.py
HRForz-API/tests/unit/: test_filter_builder.py
(+442 files in other folders)
