[project]
name = "hrforz-api"
version = "1.0.0"
description = "HRForz HRMS Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "redis[asyncio]==5.1.1",
    "arq==0.26.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "structlog==24.4.0",
    "boto3==1.35.0",
    "sendgrid==6.11.0",
    "httpx==0.27.2",
    "prometheus-fastapi-instrumentator==7.0.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "Jinja2==3.1.4",
    "python-multipart==0.0.12",
    "openpyxl==3.1.5",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "factory-boy==3.3.1",
    "mypy==1.11.2",
    "ruff==0.6.9",
    "pip-audit==2.7.3",
    "httpx==0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
